--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-to-print": "^2.5.0",
     "uuidv4": "^5.0.1"
   },
   "scripts": {
